Add java 17 results